# tcja-regime-shift

./: .gitignore  LICENSE  README.md  license  pyproject.toml  references.md  requirements.txt
.github/workflows/: python-tests.yml
data/: README.md  make_dataset.py
data/processed/: .gitkeep
docs/: proofs.tex
notebooks/: TCJA_Regime_Shift_Framework.ipynb
scripts/: run_benchmark.py
src/: __init__.py  tax_logic.py  tradeoff_model.py  visualization.py
tcja_regime_shift/: __init__.py  tax_logic.py
tests/: test_tax_logic.py  test_tradeoff.py
