[project]
name = "tcja-regime-shift"
version = "0.1.0"
description = "Structural simulation of corporate tax shield regime shifts under TCJA ยง163(j)."
authors = [
  { name = "Michael Rivas", email = "mrivassnj@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

[project.urls]
"Homepage" = "https://github.com/mrivassnj-svg/tcja-regime-shift"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10"  # if used

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
