[project]
name = "tcja-regime-shift"
version = "0.1.0"
description = "Simulation of corporate tax shield regime shifts under TCJA ยง163(j)."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Michael Rivas", email = "mrivassnj@gmail.com" }
]

# Include the src folder as your package
packages = [
  { include = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

